--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <article class="Omnie">
             <h3 class="Nagluwek">O mnie....</h3>
             <p class="Opis">
-              Nazywam się Anastasiia Reznikova.Mam 21 lat. Urodziłam się
+              Nazywam się Anastasiia Reznikova. Mam 21 lat. Urodziłam się
               04/05/2002. Jestem z Ukrainy, ale już 5 lata studiuję i mieszkam w
               Polsce. Studiuję na Politechnice Wrocławskiej na kierunku
               Informatyka Algorytmiczna I stopnia.
@@ -53,7 +53,7 @@
         <section class="Zainteresowania">
           <h3 class="Nagluwek2">Moje zainteresowania(informatyczne):</h3>
           <ul class="Lista">
-            <li>frontend</li>
+            <li>front-end</li>
             <li>bazy danych</li>
             <li>web-design</li>
           </ul>
