--- a/galeria.html
+++ b/galeria.html
@@ -31,7 +31,7 @@
         <h3 class="NagluwekGaleria">Ciekawe zdjęcia</h3>
         <div class="tab">
           <div class="Kolona1" id="kolona1">
-            <picture class="KoloGale">
+            <picture class="KoloGale" id="bez_js1">
               <!-- <source
                 srcset="./zdjencia/5.1600.jpg"
                 media="(min-width:1000px)"
@@ -45,7 +45,7 @@
                 alt="Tymofei Krzeslo"
               />
             </picture>
-            <picture>
+            <picture id="bez_js2">
               <!-- <source
                 srcset="./zdjencia/6.1600.jpg"
                 media="(min-width:1000px)"
@@ -59,7 +59,7 @@
                 alt="Tymofei motyl"
               />
             </picture>
-            <picture class="KoloGale3">
+            <picture class="KoloGale3" id="bez_js3">
               <!-- <source
                 srcset="./zdjencia/3.1600.jpg"
                 media="(min-width:1000px)"
@@ -75,7 +75,7 @@
             </picture>
           </div>
           <div class="Kolona1" id="kolona2">
-            <picture>
+            <picture id="bez_js4">
               <source srcset="./zdjencia/6.800.jpg" media="(min-width:800px)" />
               <source srcset="./zdjencia/5.640.jpg" media="(min-width:600px)" />
               <source srcset="./zdjencia/0.4.jpg" media="(min-width:300px)" />
@@ -85,7 +85,7 @@
                 alt="Tymofei usmiech"
               />
             </picture>
-            <picture class="KoloGale2">
+            <picture class="KoloGale2" id="bez_js5">
               <source srcset="./zdjencia/2.800.jpg" media="(min-width:800px)" />
               <source srcset="./zdjencia/7.640.jpg" media="(min-width:600px)" />
               <source srcset="./zdjencia/0.6.jpg" media="(min-width:300px)" />
@@ -95,7 +95,7 @@
                 alt="Tymofei motyl2"
               />
             </picture>
-            <picture>
+            <picture id="bez_js6">
               <source srcset="./zdjencia/5.800.jpg" media="(min-width:800px)" />
               <source srcset="./zdjencia/4.640.jpg" media="(min-width:600px)" />
               <source srcset="./zdjencia/0.3.jpg" media="(min-width:300px)" />
